test/typecheck/bad-expr-if.txt
;;; ERROR: 1
(module
  (func (result i32)
    i32.const 1
    i32.const 2
    if 
      i32.const 3
      drop
    end
    i32.add))
(;; STDERR ;;;
out/test/typecheck/bad-expr-if.txt:10:5: error: type stack size too small at i32.add. got 1, expected at least 2
    i32.add))
    ^^^^^^^
;;; STDERR ;;)
